# weather-mon

./: Cargo.toml  Justfile
examples/: cli.rs
src/: args.rs  clients.rs  lib.rs  location.rs  main.rs  server.rs  weather.rs
systemd/: weather-mon.service  weather-mon.socket
